--- a/arch/arm/boot/dts/imx6dl-colibri-eval-v3.dts
+++ b/arch/arm/boot/dts/imx6dl-colibri-eval-v3.dts
@@ -23,7 +23,7 @@
 
 	aliases {
 		rtc0 = &rtc_i2c;
-		rtc1 = &snvs_rtc;
+		rtc1 = "/soc/aips-bus@02000000/snvs@020cc000/snvs-rtc-lp@34";
 	};
 
 	aliases {
