colibri_vf: enable ppp and usb acm support
Enable some common PPP kernel configurations for modem or VPN use.

Enable USB ACM support for modem use.

This should make e.g. a Telit 910 modem usable out-of-the-box.

Signed-off-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>
Signed-off-by: Stefan Agner <stefan.agner@toradex.com>

--- a/arch/arm/configs/colibri_vf_defconfig
+++ b/arch/arm/configs/colibri_vf_defconfig
@@ -51,6 +51,7 @@ CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_IP_PNP=y
 CONFIG_IP_PNP_DHCP=y
+CONFIG_NET_IPGRE_DEMUX=m
 # CONFIG_INET_XFRM_MODE_TRANSPORT is not set
 # CONFIG_INET_XFRM_MODE_TUNNEL is not set
 # CONFIG_INET_XFRM_MODE_BEET is not set
@@ -74,6 +75,7 @@ CONFIG_IP_NF_NAT=y
 CONFIG_IP_NF_TARGET_MASQUERADE=y
 CONFIG_IP6_NF_IPTABLES=y
 CONFIG_NF_TABLES_BRIDGE=y
+CONFIG_L2TP=m
 CONFIG_BRIDGE=y
 # CONFIG_BRIDGE_IGMP_SNOOPING is not set
 CONFIG_BRIDGE_VLAN_FILTERING=y
@@ -126,6 +128,12 @@ CONFIG_NETDEVICES=y
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
 CONFIG_MICREL_PHY=y
+CONFIG_PPP=m
+CONFIG_PPP_DEFLATE=m
+CONFIG_PPP_MPPE=m
+CONFIG_PPTP=m
+CONFIG_PPPOL2TP=m
+CONFIG_PPP_ASYNC=m
 CONFIG_USB_NET_DRIVERS=m
 CONFIG_USB_USBNET=m
 # CONFIG_USB_NET_CDC_NCM is not set
@@ -209,6 +217,7 @@ CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_FSL_SAI_WM9712=y
 CONFIG_USB=y
 CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_ACM=m
 CONFIG_USB_STORAGE=y
 CONFIG_USB_CHIPIDEA=y
 CONFIG_USB_CHIPIDEA_UDC=y
