ARM: dts: imx7-colibri: add VBUS regulator also to OTG port
On some carrier boards (namely Aster, Viola and Orchid) the second
USB port (USBC) is used in host only mode. In this case, the USBH_PEN
signal is also used to enable USB power. This change makes sure that
USBH_PEN is also set in case only one USB port is available (as it is
the case on Colibri iMX7 Solo).

Strictly speaking we should not add the regulator in the Evaluation
Board device tree. However, we use the Evaluation Board device tree
as our "Colibri Standard" device tree and it does not really hurt on
the Evaluation Board...

Signed-off-by: Stefan Agner <stefan.agner@toradex.com>
Acked-by: Max Krummenacher <max.krummenacher@toradex.com>
(cherry picked from commit 9848329bdd5ea9166acd20681b1b7dcffc94c978)
[moved regulator reg_usb_otg2_vbus to common device tree]
Signed-off-by: Stefan Agner <stefan.agner@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/arch/arm/boot/dts/imx7-colibri-eval-v3.dtsi
+++ b/arch/arm/boot/dts/imx7-colibri-eval-v3.dtsi
@@ -87,6 +87,17 @@
 		regulator-min-microvolt = <5000000>;
 		regulator-max-microvolt = <5000000>;
 	};
+
+	reg_usb_otg2_vbus: regulator-usb-otg2-vbus {
+		compatible = "regulator-fixed";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_usbotg2_reg>;
+		regulator-name = "VCC_USB[1-4]";
+		regulator-min-microvolt = <5000000>;
+		regulator-max-microvolt = <5000000>;
+		gpio = <&gpio4 7 GPIO_ACTIVE_LOW>;
+		vin-supply = <&reg_5v0>;
+	};
 };
 
 &bl {
@@ -306,6 +317,7 @@
 };
 
 &usbotg1 {
+	vbus-supply = <&reg_usb_otg2_vbus>;
 	status = "okay";
 };
 
