ARM: dts: imx6qdl-apalis: Split pinctrl for usdhc1 to support 4 and 8 bit
Split the pinctrl property for usdhc1 into a 4bit SD interface
and an extension to 8bit. This is required to support the 8 bit
MMC interface on the Evaluation Board for usdhc1 and the 4 bit
SD interface on Ixora V1.1 for usdhc1.

Signed-off-by: Sanchayan Maity <maitysanchayan@gmail.com>
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
(cherry picked from commit 42f45b7516eb2ce24f122382c49c2f63a6763292)

Conflicts:
	arch/arm/boot/dts/imx6qdl-apalis.dtsi

--- a/arch/arm/boot/dts/imx6qdl-apalis.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-apalis.dtsi
@@ -695,7 +695,7 @@
 /* MMC1 */
 &usdhc1 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_usdhc1 &pinctrl_mmc_cd>;
+	pinctrl-0 = <&pinctrl_usdhc1_4bit &pinctrl_usdhc1_8bit &pinctrl_mmc_cd>;
 	cd-gpios = <&gpio4 20 GPIO_ACTIVE_LOW>;
 	enable-sdio-wakeup;
 	keep-power-in-suspend;
@@ -1156,7 +1156,7 @@
 		>;
 	};
 
-	pinctrl_usdhc1: usdhc1grp {
+	pinctrl_usdhc1_4bit: usdhc1grp_4bit {
 		fsl,pins = <
 			MX6QDL_PAD_SD1_CMD__SD1_CMD    0x17071
 			MX6QDL_PAD_SD1_CLK__SD1_CLK    0x10071
@@ -1164,6 +1164,10 @@
 			MX6QDL_PAD_SD1_DAT1__SD1_DATA1 0x17071
 			MX6QDL_PAD_SD1_DAT2__SD1_DATA2 0x17071
 			MX6QDL_PAD_SD1_DAT3__SD1_DATA3 0x17071
+		>;
+	};
+	pinctrl_usdhc1_8bit: usdhc1grp_8bit {
+		fsl,pins = <
 			MX6QDL_PAD_NANDF_D0__SD1_DATA4 0x17071
 			MX6QDL_PAD_NANDF_D1__SD1_DATA5 0x17071
 			MX6QDL_PAD_NANDF_D2__SD1_DATA6 0x17071
