arm64: dts: hikey960: Add optee node
Signed-off-by: Victor Chong <victor.chong@linaro.org>
(cherry picked from commit e5e0700c75d70b5dbacb27f80df8233891138592)

--- a/arch/arm64/boot/dts/hisilicon/hi3660-hikey960.dts
+++ b/arch/arm64/boot/dts/hisilicon/hi3660-hikey960.dts
@@ -222,6 +222,13 @@
 		compatible = "hisi,hisi-smmu-lpae";
 		status = "ok";
 	};
+
+	firmware {
+		optee {
+			compatible = "linaro,optee-tz";
+			method = "smc";
+		};
+	};
 };
 
 &i2c0 {
