hikey960_defconfig: enable sync_file
Signed-off-by: John Stultz <john.stultz@linaro.org>

--- a/arch/arm64/configs/hikey960_defconfig
+++ b/arch/arm64/configs/hikey960_defconfig
@@ -415,13 +415,13 @@ CONFIG_RTC_DRV_PL031=y
 CONFIG_RTC_DRV_XGENE=y
 CONFIG_DMADEVICES=y
 CONFIG_HISI_ASP_DMA=y
+CONFIG_SYNC_FILE=y
+CONFIG_SW_SYNC=y
 CONFIG_VIRTIO_BALLOON=y
 CONFIG_VIRTIO_MMIO=y
 CONFIG_STAGING=y
 CONFIG_ASHMEM=y
-# CONFIG_ANDROID_TIMED_OUTPUT is not set
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_SYNC=y
 CONFIG_ION=y
 CONFIG_ION_HISI=y
 CONFIG_STUB_CLK_HI6220=y
