--- a/drivers/gpu/arm_gpu/ipa/Kbuild
+++ b/drivers/gpu/arm_gpu/ipa/Kbuild
@@ -19,7 +19,7 @@ mali_kbase-y += \
 
 mali_kbase-$(CONFIG_DEBUG_FS) += ipa/mali_kbase_ipa_debugfs.o
 
-ifneq ($(wildcard $(src)/ipa/mali_kbase_ipa_vinstr_g71.c),)
+ifneq ($(wildcard $(srctree)/$(src)/ipa/mali_kbase_ipa_vinstr_g71.c),)
   mali_kbase-y += \
 	ipa/mali_kbase_ipa_vinstr_g71.o \
 	ipa/mali_kbase_ipa_vinstr_common.o
