ARM: dts: imx7-colibri: fix MCP2515 node label and name
Use common convention where label is using the device model number
and the node name is using a generic device type.

Signed-off-by: Stefan Agner <stefan.agner@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/arch/arm/boot/dts/imx7-colibri-eval-v3.dtsi
+++ b/arch/arm/boot/dts/imx7-colibri-eval-v3.dtsi
@@ -123,7 +123,7 @@
 &ecspi3 {
 	status = "okay";
 
-	mcp258x0: mcp258x@0 {
+	mcp2515: can@0 {
 		compatible = "microchip,mcp2515";
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_can_int>;
