--- a/arch/arm/boot/dts/imx7-colibri-eval-v3.dtsi
+++ b/arch/arm/boot/dts/imx7-colibri-eval-v3.dtsi
@@ -317,6 +317,7 @@
 };
 
 &usbotg1 {
+	extcon = <&extcon_usbc_det>, <&extcon_usbc_det>;
 	vbus-supply = <&reg_usb_otg2_vbus>;
 	status = "okay";
 };
