ARM: dts: imx6-colibri: Specify cable detect as ID and VBUS pin
Commit 95c163471135 ("usb: chipidea: use of extcon framework to
work for non OTG case") requires both pins to be specified (ID and
VBUS pin) to work correctly.

Signed-off-by: Stefan Agner <stefan.agner@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/arch/arm/boot/dts/imx6dl-colibri-eval-v3.dts
+++ b/arch/arm/boot/dts/imx6dl-colibri-eval-v3.dts
@@ -277,7 +277,7 @@
 
 &usbotg {
 	status = "okay";
-	extcon = <&extcon_usbc_det>;
+	extcon = <&extcon_usbc_det>, <&extcon_usbc_det>;
 };
 
 /* MMC */
