ARM: dts: imx6: Apalis imx6, force PCIE GEN1 speed
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/arch/arm/boot/dts/imx6qdl-apalis.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-apalis.dtsi
@@ -611,6 +611,11 @@
 	};
 };
 
+&pcie {
+	/* Gen2 does not work on Apalis iMX6 */
+	fsl,max-link-speed = <1>;
+};
+
 &pwm1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm1>;
