--- a/arch/arm/boot/dts/imx6ull-colibri-wifi.dtsi
+++ b/arch/arm/boot/dts/imx6ull-colibri-wifi.dtsi
@@ -37,6 +37,9 @@
 &usdhc2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc2>;
+	assigned-clocks = <&clks IMX6UL_CLK_USDHC2_SEL>, <&clks IMX6UL_CLK_USDHC2>;
+	assigned-clock-parents = <&clks IMX6UL_CLK_PLL2_PFD2>;
+	assigned-clock-rates = <0>, <198000000>;
 	no-1-8-v;
 	disable-wp;
 	enable-sdio-wakeup;
@@ -44,18 +47,9 @@
 	broken-cd;
 	/* non-removable;*/
 	status = "okay";
+	/*
+	 * Does not work for a WiFi chip since vmmc get turned on only during
+	 * SDIO communication...
+	 */
 //	vmmc-supply = <&reg_wifi_pwd>;
-
-#if 0
-	mwifiex: wifi@1 {
-//??? what is it really?
-		compatible = "marvell,sd8787";
-		reg = <1>;
-		interrupt-parent = <&pio>;
-		interrupts = <38 IRQ_TYPE_LEVEL_LOW>;
-
-		marvell,caldata_00_txpwrlimit_2g_cfg_set = /bits/ 8 <0x01 0x00 0x06 0x00 0x08 0x02 0x89 0x01>;
-		marvell,wakeup-pin = <3>;
-	};
-#endif
 };
